// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="file__FullWrapper-nomheg-0 bNmTZ"
  >
    <div
      className="sc-bdVaJa lmSTxo"
    >
      <div
        className="file__Title-nomheg-3 eEgszg"
      >
        The Work of Bruce M. Sherman
      </div>
      <div
        className="file__SubTitle-nomheg-4 ifgou"
      >
        <div
          className="file__SubTitlePrompt-nomheg-5 fQcKPY"
        >
          View Slideshow
        </div>
        <div
          className="file__SubTitleCount-nomheg-6 gqWZzX"
        >
          3
           Images
        </div>
      </div>
    </div>
    <div
      className="file__IconContainer-nomheg-7 hDeRFJ"
    >
      <svg
        data-name="imageset"
        id="imageset"
        viewBox="0 0 44 44"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
          transform="translate(-6728.67 -507.72)"
        />
        <polygon
          points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
        />
        <polygon
          points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
        />
      </svg>
    </div>
  </div>
  <img
    alt="The Work of Bruce M. Sherman"
    height="auto"
    src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
    width="100%"
  />
</div>
`;

exports[`renders a mini image set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="file__MiniWrapper-nomheg-1 ipkiP"
  >
    <img
      alt="The Work of Bruce M. Sherman"
      height="100%"
      src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
      width="auto"
    />
    <div
      className="file__MiniInner-nomheg-2 eBcatD"
    >
      <div
        className="sc-bdVaJa hskcns"
      >
        <div
          className="file__Title-nomheg-3 eEgszg"
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="file__SubTitle-nomheg-4 ifgou"
        >
          <div
            className="file__SubTitlePrompt-nomheg-5 fQcKPY"
          >
            View Slideshow
          </div>
          <div
            className="file__SubTitleCount-nomheg-6 gqWZzX"
          >
            3
             Images
          </div>
        </div>
      </div>
      <div
        className="file__IconContainer-nomheg-7 hDeRFJ"
      >
        <svg
          data-name="imageset"
          id="imageset"
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
            transform="translate(-6728.67 -507.72)"
          />
          <polygon
            points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
          />
          <polygon
            points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
